--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Modal</title>
-    <!-- for more information, visit https://github.com/Gustavo250302/Modal/blob/master/index.html -->
+    <!-- for more information, visit https://github.com/Gustavo250302/Modal-React/ -->
 
     <!--required links-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
